upd dependencies, add .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-PORT=3000
+PORT=4000
+NUXT_APP_URL=https://example.com
+TELEGRAM_BOT_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
+DATABASE_URL=postgresql://user:password@localhost:5432/dbName
+JWT_ACCESS_SECRET=SECRET_STRING
+JWT_REFRESH_SECRET=SECRET_STRING_2
+OPENROUTER_API_KEY=sk-or.......................................
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
