--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=4000
 NUXT_APP_URL=https://example.com
+NUXT_DOMAIN=t.me/example/app
 TELEGRAM_BOT_TOKEN=123456:ABC-DEF1234ghIkl-zyx57W2v1u123ew11
 DATABASE_URL=postgresql://user:password@localhost:5432/dbName
 JWT_ACCESS_SECRET=SECRET_STRING
