--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "jsonwebtoken": "^9.0.2",
+    "nestjs-telegraf": "^2.9.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "telegraf": "^4.16.3",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -51,7 +53,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.15.17",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.18.0",
